Wrap CollectionHelpers for PointList. Bugs with compare Optional against null. Tidy warnings up