@@ -27,16 +27,14 @@ package org.streeto.scorers;
 
 import com.graphhopper.GHResponse;
 import com.graphhopper.util.PointList;
-import com.graphhopper.util.shapes.GHPoint;
-import com.graphhopper.util.shapes.GHPoint3D;
-import one.util.streamex.StreamEx;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import static org.streeto.DistUtils.dist;
+import static org.streeto.utils.CollectionHelpers.*;
+import static org.streeto.utils.DistUtils.dist;
 
 
 public class DogLegScorer extends AbstractLegScorer {
@@ -55,7 +53,7 @@ public class DogLegScorer extends AbstractLegScorer {
         if (routes.size() < 2) return List.of(0.0);
         else {
             var ret = new ArrayList<>(List.of(0.0));
-            var dogLegScores = StreamEx.ofSubLists(routes, 2, 1).map(this::dogLegScore).toList();
+            var dogLegScores = beforeAndAfterLegs(routes).map(this::dogLegScore).collect(Collectors.toList());
             ret.addAll(dogLegScores);
             return ret;
         }
@@ -66,7 +64,7 @@ public class DogLegScorer extends AbstractLegScorer {
         var a2b = legs.get(0);
         var b2c = legs.get(1);
         if (a2b.size() < 2 || b2c.size() < 2) return 1.0; //controls are in the same place
-        var inAandB = dropLastAsList(a2b,1).stream().filter (it -> dropAsList(b2c,1).contains(it) ).collect(Collectors.toList());
+        var inAandB = dropLast(a2b,1).stream().filter (it -> drop(b2c,1).contains(it) ).collect(Collectors.toList());
         var numInAandB = inAandB.size();
         if( numInAandB == 0) return 0.0;
         else {
@@ -79,21 +77,5 @@ public class DogLegScorer extends AbstractLegScorer {
         }
     }
 
-    private GHPoint last(List<GHPoint3D> list) {
-        var num = list.size() - 1;
-        return list.get(num);
-    }
-
-    private GHPoint first(List<GHPoint3D> list) {
-        return list.get(0);
-    }
-
-    private List<GHPoint3D> dropAsList(PointList b2c, int i) {
-        return StreamEx.of(b2c.iterator()).toList().subList(i, b2c.size());
-    }
-
-    private List<GHPoint3D> dropLastAsList(PointList a2b, int i) {
-        return StreamEx.of(a2b.iterator()).toList().subList(0, a2b.size() - i);
-    }
 }
 
